2004-08-17	blytkerchan	continue translation to C
	* thread_queue.h: new file
	* thread_list.h: ditto
	* rw_lock.c: move lt_thread_queue_* declarations to thread_queue.h
	move lt_thread_list_* declarations to thread_list.h
	include stdlib
	(lt_rwlock_new): new function
	(lt_rwlock_free): ditto
	(lt_rwlock_write_unlock) [place_holder]: make a lt_thread_list_t
	* rw_lock.h: include thread_list.h
	include thread_queue.h
	[lt_rwlock_t]: make readers field an array of lt_thread_list_t's
	make writers and general fields lt_thread_queue_t's

	* rw_lock.c: %s/lt_rwlock_queue/lt_thread_queue/g
	%s/lt_rwlock_list/lt_thread_list/g

	* module.mk [libthread_SRC]: add rw_lock.c
	* rw_lock.c: include assert.h
	include compare_and_exchange.h
	declare static functions for all undefined functions used
	(lt_rwlock_write_unlock) <place_holder>: new variable
	use atomic_swap_ptr in stead of atomic_swap
	use lt_thread_wake in stead of awake
	(lt_rwlock_scheule): fix type-os and missing semicolons
	use compare_and_exchange_ptr in stead of compare_and_exchange
	use READER in stead of reader and WRITER in stead of writer
	use lt_rwlock_queue_first in stead of first
	* rw_lock.h: include thread.h
	[lt_rwlock_t]: translate to C
	* thread.h [lt_thread_t]: add flag field

2004-08-16	blytkerchan	continue translation to C
	* rw_lock.c (lt_rwlock_read_unlock): use lt_rwlock_queue_empty on
	writers - not lt_rwlock_list_empty
	use lt_rwlock_list_empty on readers[1]
	use lt_thread_wake in stead of awake
	(lt_rwlock_write_unlock): use lt_rwlock_queue_deq, not
	lt_wrlock_queue_deq
	use lt_rwlock_list_move in stead of move
	use lt_rwlock_list_for_each in stead of for_each
	(lt_rwlock_schedule): use lt_rwlock_queue_enq in stead of enq
	use lt_rwlock_queue_first in stead of first
	use lt_thread_suspend in stead of suspend
	fix comments - make them C comments
	use compare_and_exchange in stead of CAS
	use lt_rwlock_queue_empty in stead of empty
	use lt_rwlock_queue_deq in stead of deq